# mantle

./: .gitignore  CHANGELOG.md  LICENSE  makefile  mantle.cabal  mma.json  test.ml  test.mt
lib/: core.mt
lib/core/: arithmatic.mt  classes.mt  combinator.mt
src/: Lodash.hs  Main.hs
src/Language/MantLe/: Lexer.hs  Math.hs  Parser.hs  Types.hs
src/Language/MantLe/Backend/: Interpreter.hs  Loader.hs  Typecheck.hs
src/Language/MantLe/Backend/MMA/: Codegen.hs  Types.hs
src/Language/MantLe/Parser/: Token.hs  Types.hs
src/Language/MantLe/Parser/Expr/: Pattern.hs  Type.hs  Types.hs  Val.hs
src/Language/MantLe/Parser/Statements/: Binding.hs  Class.hs  Data.hs  Declare.hs  Equation.hs  Import.hs  Instance.hs  Object.hs
